feat(CAT-FR-GD-03): apply review feedback
Reworked tests to be more descriptive and meaningful