@@ -1,30 +1,5 @@
 package eu.xfsc.fc.graphdb.service;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-
-import org.apache.jena.rdfconnection.RDFConnection;
-import org.apache.jena.system.Txn;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.EnumSource;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.Import;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.ContextConfiguration;
-
 import eu.xfsc.fc.api.generated.model.QueryLanguage;
 import eu.xfsc.fc.core.exception.QueryException;
 import eu.xfsc.fc.core.pojo.GraphQuery;
@@ -32,12 +7,38 @@ import eu.xfsc.fc.core.pojo.PaginatedResults;
 import eu.xfsc.fc.core.pojo.SdClaim;
 import eu.xfsc.fc.core.service.graphdb.GraphStore;
 import eu.xfsc.fc.graphdb.config.EmbeddedFusekiConfig;
+import org.apache.jena.rdfconnection.RDFConnection;
+import org.apache.jena.system.Txn;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.Import;
+import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.ContextConfiguration;
+
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Stream;
+
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest
 @ActiveProfiles("test")
 @ContextConfiguration(classes = {SparqlGraphStore.class})
 @Import(EmbeddedFusekiConfig.class)
 public class SparqlGraphStoreTest {
+
+    private static final String RDF_TYPE = "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>";
+    private static final String CRED_SUBJECT_URI = "https://www.w3.org/2018/credentials#credentialSubject";
 
     @Autowired
     private GraphStore graphStore;
@@ -56,248 +57,184 @@ public class SparqlGraphStoreTest {
     }
 
     @Test
-    void testAddClaimsAndQuerySparqlStar() {
-        List<SdClaim> claims = Arrays.asList(
-            new SdClaim(
-                "<http://example.org/subject1>",
-                "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-                "<http://example.org/ServiceOffering>"
-            ),
-            new SdClaim(
-                "<http://example.org/subject1>",
-                "<http://example.org/name>",
-                "\"Test Service\""
-            )
+    void addClaims_queriedWithSparqlStar_returnsUploadedTripleData() {
+        List<SdClaim> claims = List.of(
+            typeClaim("http://example.org/subject1", "http://example.org/ServiceOffering"),
+            literalClaim("http://example.org/subject1", "http://example.org/name", "Test Service")
         );
+        graphStore.addClaims(claims, "http://example.org/credential1");
 
-        String credentialSubject = "http://example.org/credential1";
-        graphStore.addClaims(claims, credentialSubject);
+        List<Map<String, Object>> rows = queryAllClaimsByCredentialSubject().getResults();
 
-        // Query using SPARQL-star syntax because addClaims stores claims as triple nodes
-        String sparqlStarQuery = "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <https://www.w3.org/2018/credentials#credentialSubject> ?cs }";
-        GraphQuery query = new GraphQuery(sparqlStarQuery, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false);
-
-        PaginatedResults<Map<String, Object>> results = graphStore.queryData(query);
-
-        assertNotNull(results);
-        assertFalse(results.getResults().isEmpty(), "SPARQL-star query should return non-empty results");
-        assertEquals(2, results.getResults().size(), "Should return 2 results for 2 claims");
-
-        // Verify that result values are plain Java types
-        Map<String, Object> firstResult = results.getResults().get(0);
-        assertNotNull(firstResult.get("s"));
-        assertNotNull(firstResult.get("p"));
-        assertNotNull(firstResult.get("o"));
+        assertEquals(2, rows.size(), "Should return 2 results for 2 claims");
+        boolean foundType = rows.stream().anyMatch(r ->
+            "http://example.org/subject1".equals(r.get("s")) &&
+            "http://www.w3.org/1999/02/22-rdf-syntax-ns#type".equals(r.get("p")) &&
+            "http://example.org/ServiceOffering".equals(r.get("o")));
+        boolean foundName = rows.stream().anyMatch(r ->
+            "http://example.org/subject1".equals(r.get("s")) &&
+            "http://example.org/name".equals(r.get("p")) &&
+            "Test Service".equals(r.get("o")));
+        assertTrue(foundType, "Should contain the rdf:type triple with ServiceOffering URI");
+        assertTrue(foundName, "Should contain the name triple with literal value 'Test Service'");
     }
 
     @Test
-    void testAddClaimsCreatesRdfStarStatements() {
-        List<SdClaim> claims = Arrays.asList(
-            new SdClaim(
-                "<http://example.org/subject2>",
-                "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-                "<http://example.org/Resource>"
-            ),
-            new SdClaim(
-                "<http://example.org/subject2>",
-                "<http://example.org/label>",
-                "\"My Resource\""
-            )
+    void addClaims_wrapsEachClaimWithCredentialSubjectMetaProperty() {
+        List<SdClaim> claims = List.of(
+            typeClaim("http://example.org/subject2", "http://example.org/Resource"),
+            literalClaim("http://example.org/subject2", "http://example.org/label", "My Resource")
         );
-
         String credentialSubject = "http://example.org/credential2";
         graphStore.addClaims(claims, credentialSubject);
 
-        // Query for the RDF-star meta-properties
-        String sparqlStarQuery = "SELECT ?s ?p ?o ?mp ?mo WHERE { <<?s ?p ?o>> ?mp ?mo }";
-        GraphQuery query = new GraphQuery(sparqlStarQuery, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false);
+        List<Map<String, Object>> rows = querySparql(
+            "SELECT ?s ?p ?o ?mp ?mo WHERE { <<?s ?p ?o>> ?mp ?mo }").getResults();
 
-        PaginatedResults<Map<String, Object>> results = graphStore.queryData(query);
-
-        assertFalse(results.getResults().isEmpty(), "Should have RDF-star statements");
-        assertEquals(2, results.getResults().size(), "Should have 2 RDF-star wrapped statements");
-
-        for (Map<String, Object> row : results.getResults()) {
-            // Each claim should be wrapped with cred:credentialSubject pointing to our subject
-            assertEquals("https://www.w3.org/2018/credentials#credentialSubject", row.get("mp"),
+        assertEquals(2, rows.size(), "Should have 2 RDF-star wrapped statements");
+        for (Map<String, Object> row : rows) {
+            assertEquals(CRED_SUBJECT_URI, row.get("mp"),
                 "Meta-property should be credentialSubject URI");
             assertEquals(credentialSubject, row.get("mo"),
                 "Meta-object should match the credential subject passed to addClaims");
+            assertEquals("http://example.org/subject2", row.get("s"),
+                "Inner triple subject should be the uploaded subject URI");
         }
     }
 
     @Test
-    void testDeleteClaimsRemovesTargetOnly() {
-        // Add claims for credential subject 1
-        List<SdClaim> claims1 = Arrays.asList(
-            new SdClaim(
-                "<http://example.org/subjectA>",
-                "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-                "<http://example.org/TypeA>"
-            ),
-            new SdClaim(
-                "<http://example.org/subjectA>",
-                "<http://example.org/name>",
-                "\"Subject A\""
-            )
-        );
-        String credSub1 = "http://example.org/credentialA";
-        graphStore.addClaims(claims1, credSub1);
+    void deleteClaims_removesOnlyTargetCredentialSubject_leavesOthersIntact() {
+        String credSubA = "http://example.org/credentialA";
+        String credSubB = "http://example.org/credentialB";
+        graphStore.addClaims(List.of(
+            typeClaim("http://example.org/subjectA", "http://example.org/TypeA"),
+            literalClaim("http://example.org/subjectA", "http://example.org/name", "Subject A")
+        ), credSubA);
+        graphStore.addClaims(List.of(
+            typeClaim("http://example.org/subjectB", "http://example.org/TypeB"),
+            literalClaim("http://example.org/subjectB", "http://example.org/name", "Subject B")
+        ), credSubB);
 
-        // Add claims for credential subject 2
-        List<SdClaim> claims2 = Arrays.asList(
-            new SdClaim(
-                "<http://example.org/subjectB>",
-                "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-                "<http://example.org/TypeB>"
-            ),
-            new SdClaim(
-                "<http://example.org/subjectB>",
-                "<http://example.org/name>",
-                "\"Subject B\""
-            )
-        );
-        String credSub2 = "http://example.org/credentialB";
-        graphStore.addClaims(claims2, credSub2);
+        graphStore.deleteClaims(credSubA);
 
-        // Delete only credential subject 1
-        graphStore.deleteClaims(credSub1);
+        assertTrue(queryBySpecificCredentialSubject(credSubA).getResults().isEmpty(),
+            "Deleted credential subject should have 0 results");
 
-        // Verify: 0 results for deleted subject
-        String queryDeleted = "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <https://www.w3.org/2018/credentials#credentialSubject> <" + credSub1 + "> }";
-        GraphQuery gqDeleted = new GraphQuery(queryDeleted, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false);
-        PaginatedResults<Map<String, Object>> deletedResults = graphStore.queryData(gqDeleted);
-        assertTrue(deletedResults.getResults().isEmpty(), "Deleted credential subject should have 0 results");
-
-        // Verify: non-empty results for surviving subject
-        String querySurviving = "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <https://www.w3.org/2018/credentials#credentialSubject> <" + credSub2 + "> }";
-        GraphQuery gqSurviving = new GraphQuery(querySurviving, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false);
-        PaginatedResults<Map<String, Object>> survivingResults = graphStore.queryData(gqSurviving);
-        assertFalse(survivingResults.getResults().isEmpty(), "Surviving credential subject should still have results");
-        assertEquals(2, survivingResults.getResults().size(), "Surviving subject should have 2 claims");
+        List<Map<String, Object>> rows = queryBySpecificCredentialSubject(credSubB).getResults();
+        assertEquals(2, rows.size(), "Surviving subject should have 2 claims");
+        boolean foundTypeB = rows.stream().anyMatch(r ->
+            "http://example.org/subjectB".equals(r.get("s")) &&
+            "http://example.org/TypeB".equals(r.get("o")));
+        boolean foundNameB = rows.stream().anyMatch(r ->
+            "http://example.org/subjectB".equals(r.get("s")) &&
+            "Subject B".equals(r.get("o")));
+        assertTrue(foundTypeB, "Surviving results should contain Subject B's type triple");
+        assertTrue(foundNameB, "Surviving results should contain Subject B's name triple");
     }
 
     @Test
-    void testQueryDataPreservesOrderByClause() {
-        // Add multiple claims that will produce an ordered result
-        List<SdClaim> claims = Arrays.asList(
-            new SdClaim(
-                "<http://example.org/item1>",
-                "<http://example.org/name>",
-                "\"Charlie\""
-            ),
-            new SdClaim(
-                "<http://example.org/item2>",
-                "<http://example.org/name>",
-                "\"Alice\""
-            ),
-            new SdClaim(
-                "<http://example.org/item3>",
-                "<http://example.org/name>",
-                "\"Bob\""
-            )
-        );
-        String credentialSubject = "http://example.org/credentialOrder";
-        graphStore.addClaims(claims, credentialSubject);
+    void queryData_withOrderByClause_returnsResultsInSortedOrder() {
+        graphStore.addClaims(List.of(
+            literalClaim("http://example.org/item1", "http://example.org/name", "Charlie"),
+            literalClaim("http://example.org/item2", "http://example.org/name", "Alice"),
+            literalClaim("http://example.org/item3", "http://example.org/name", "Bob")
+        ), "http://example.org/credentialOrder");
 
-        // Query with ORDER BY to verify ordering is preserved (not shuffled)
-        String sparqlQuery = "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <https://www.w3.org/2018/credentials#credentialSubject> ?cs } ORDER BY ?o";
-        GraphQuery query = new GraphQuery(sparqlQuery, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false);
+        List<Map<String, Object>> rows = querySparql(
+            "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <" + CRED_SUBJECT_URI + "> ?cs } ORDER BY ?o"
+        ).getResults();
 
-        PaginatedResults<Map<String, Object>> results = graphStore.queryData(query);
-        assertEquals(3, results.getResults().size(), "Should return 3 results");
-
-        // With ORDER BY ?o, results should be sorted: Alice, Bob, Charlie
-        assertEquals("Alice", results.getResults().get(0).get("o"));
-        assertEquals("Bob", results.getResults().get(1).get("o"));
-        assertEquals("Charlie", results.getResults().get(2).get("o"));
+        assertEquals(3, rows.size(), "Should return 3 results");
+        assertEquals("Alice", rows.get(0).get("o"));
+        assertEquals("Bob", rows.get(1).get("o"));
+        assertEquals("Charlie", rows.get(2).get("o"));
     }
 
     @Test
-    void testAddClaimsValidation() {
-        String credentialSubject = "http://example.org/credentialValidation";
+    void addClaims_withValidClaim_persistsInStore() {
+        graphStore.addClaims(
+            List.of(typeClaim("http://example.org/subject", "http://example.org/Type")),
+            "http://example.org/credentialValidation");
 
-        // Syntactically correct claim should pass
-        SdClaim validClaim = new SdClaim(
-            "<http://example.org/subject>",
-            "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-            "<http://example.org/Type>"
-        );
-        assertDoesNotThrow(
-            () -> graphStore.addClaims(Collections.singletonList(validClaim), credentialSubject),
-            "A syntactically correct triple should pass validation"
-        );
+        assertEquals(1, queryAllClaimsByCredentialSubject().getResults().size(),
+            "Valid claim should be persisted in the store");
+    }
 
-        // Broken subject URI should be rejected
-        SdClaim brokenSubject = new SdClaim(
-            "<__http://example.org/broken__>",
-            "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-            "<http://example.org/Type>"
-        );
-        Exception exception = assertThrows(
-            QueryException.class,
-            () -> graphStore.addClaims(Collections.singletonList(brokenSubject), credentialSubject),
-            "A broken subject URI should be rejected"
-        );
-        assertTrue(exception.getMessage().contains("Subject in triple"),
-            "Error should mention the subject");
+    @ParameterizedTest
+    @MethodSource("malformedUriClaims")
+    void addClaims_withMalformedUri_throwsQueryExceptionIdentifyingBrokenPart(
+            SdClaim brokenClaim, String expectedMessageFragment) {
+        Exception exception = assertThrows(QueryException.class,
+            () -> graphStore.addClaims(List.of(brokenClaim), "http://example.org/credential"));
 
-        // Broken predicate URI should be rejected
-        SdClaim brokenPredicate = new SdClaim(
-            "<http://example.org/subject>",
-            "<__http://example.org/broken__>",
-            "<http://example.org/Type>"
-        );
-        exception = assertThrows(
-            QueryException.class,
-            () -> graphStore.addClaims(Collections.singletonList(brokenPredicate), credentialSubject),
-            "A broken predicate URI should be rejected"
-        );
-        assertTrue(exception.getMessage().contains("Predicate in triple"),
-            "Error should mention the predicate");
+        assertTrue(exception.getMessage().contains(expectedMessageFragment),
+            "Error message should contain '" + expectedMessageFragment + "'");
+    }
 
-        // Broken object URI should be rejected
-        SdClaim brokenObject = new SdClaim(
-            "<http://example.org/subject>",
-            "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
-            "<__http://example.org/broken__>"
+    static Stream<Arguments> malformedUriClaims() {
+        return Stream.of(
+            Arguments.of(
+                new SdClaim("<__http://example.org/broken__>", RDF_TYPE,
+                    "<http://example.org/Type>"),
+                "Subject in triple"),
+            Arguments.of(
+                new SdClaim("<http://example.org/subject>", "<__http://example.org/broken__>",
+                    "<http://example.org/Type>"),
+                "Predicate in triple"),
+            Arguments.of(
+                new SdClaim("<http://example.org/subject>", RDF_TYPE,
+                    "<__http://example.org/broken__>"),
+                "Object in triple")
         );
-        exception = assertThrows(
-            QueryException.class,
-            () -> graphStore.addClaims(Collections.singletonList(brokenObject), credentialSubject),
-            "A broken object URI should be rejected"
-        );
-        assertTrue(exception.getMessage().contains("Object in triple"),
-            "Error should mention the object");
     }
 
     @ParameterizedTest
     @EnumSource(value = QueryLanguage.class, names = {"OPENCYPHER", "GRAPHQL"})
-    void testQueryDataRejectsNonSparql(QueryLanguage language) {
+    void queryData_withUnsupportedLanguage_throwsUnsupportedOperationException(QueryLanguage language) {
         GraphQuery query = new GraphQuery("SELECT * WHERE { ?s ?p ?o }", Map.of(),
             language, GraphQuery.QUERY_TIMEOUT, false);
 
         UnsupportedOperationException exception = assertThrows(
             UnsupportedOperationException.class,
-            () -> graphStore.queryData(query),
-            "Should reject " + language + " query language"
-        );
+            () -> graphStore.queryData(query));
+
         assertTrue(exception.getMessage().contains(language.name()),
             "Exception message should contain the rejected language name: " + language.name());
     }
 
     @Test
-    void testAddClaimsEmptyList() {
+    void addClaims_withEmptyList_storesNothing() {
         String credentialSubject = "http://example.org/emptySubject";
-        assertDoesNotThrow(
-            () -> graphStore.addClaims(Collections.emptyList(), credentialSubject),
-            "Adding empty claim list should be a safe no-op"
-        );
 
-        // Verify nothing was stored
-        String sparqlQuery = "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <https://www.w3.org/2018/credentials#credentialSubject> <" + credentialSubject + "> }";
-        GraphQuery query = new GraphQuery(sparqlQuery, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false);
-        PaginatedResults<Map<String, Object>> results = graphStore.queryData(query);
-        assertTrue(results.getResults().isEmpty(), "No results should be stored for empty claim list");
+        assertDoesNotThrow(
+            () -> graphStore.addClaims(List.of(), credentialSubject));
+
+        assertTrue(queryBySpecificCredentialSubject(credentialSubject).getResults().isEmpty(),
+            "No results should be stored for empty claim list");
+    }
+
+    // --- Helpers ---
+
+    private PaginatedResults<Map<String, Object>> querySparql(String sparql) {
+        return graphStore.queryData(new GraphQuery(
+            sparql, Map.of(), QueryLanguage.SPARQL, GraphQuery.QUERY_TIMEOUT, false));
+    }
+
+    private PaginatedResults<Map<String, Object>> queryAllClaimsByCredentialSubject() {
+        return querySparql(
+            "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <" + CRED_SUBJECT_URI + "> ?cs }");
+    }
+
+    private PaginatedResults<Map<String, Object>> queryBySpecificCredentialSubject(String credentialSubject) {
+        return querySparql(
+            "SELECT ?s ?p ?o WHERE { <<?s ?p ?o>> <" + CRED_SUBJECT_URI + "> <" + credentialSubject + "> }");
+    }
+
+    private static SdClaim typeClaim(String subject, String type) {
+        return new SdClaim("<" + subject + ">", RDF_TYPE, "<" + type + ">");
+    }
+
+    private static SdClaim literalClaim(String subject, String predicate, String value) {
+        return new SdClaim("<" + subject + ">", "<" + predicate + ">", "\"" + value + "\"");
     }
 }
